# earning_calls_analysis

./: .gitignore  Makefile  README.md  _build_ticker_map.py  _companies.txt  _extend_ticker_map.py  pyproject.toml  requirements.txt
legacy/: preprocess_earnings_calls.py
outputs/: regression_results.csv  regression_results.txt
outputs/presentation/: presentation_bullets.md  speaker_role_stats.csv  summary_kpis.csv
scripts/: build_presentation_assets.py  resume_r1000_scraper.sh  run_analysis.sh  run_preprocess.sh  sentiment_stats.py
src/: run_dataset_checks.py  run_preprocessing.py
src/analysis/: build_panel.py  fetch_returns.py  finetune_finbert.py  run_regressions.py  score_sentiment.py
src/pipeline/: __init__.py  cleaner.py  company_ticker_map.json  deduplicator.py  metadata.py  segmenter.py  writer.py
src/preprocessing/: chunker.py  loader.py  sectioner.py
src/scraper/: README.md  requirements.txt  run_full_corpus_eda.py  run_missing_r1000.py  scrape_r1000_missing.py
src/scraper/koyfin_fast/: __init__.py  auth.py  browser.py  logging_utils.py  models.py  parser.py  retriever.py  search_page.py  selectors.py  storage.py  transcript_page.py  utils.py
