[project]
name = "big-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "yfinance>=1.2.0",
    # ── analysis ──
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.14",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "accelerate>=1.1.0",
]
